--- a/app/src/main/res/layout/activity_project_dashboard.xml
+++ b/app/src/main/res/layout/activity_project_dashboard.xml
@@ -148,7 +148,7 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
-        <RelativeLayout
+       <!-- <RelativeLayout
             android:layout_width="150dp"
             android:layout_height="100dp"
             android:layout_gravity="bottom"
@@ -165,7 +165,7 @@
                 app:fabSize="normal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
-        </RelativeLayout>
+        </RelativeLayout> -->
 
     </LinearLayout>
 
