--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,6 +7,8 @@
     android:orientation="vertical"
     tools:context=".miscellaneous.Profile"
     android:background="@color/backgroundDark"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
     >
 
 
@@ -77,6 +79,38 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="Choose Profile Picture"/>
+
+
+    <!--First Name Entry-->
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/fname_inputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/um_signup_heading_spacing"
+        android:hint="Name">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/fname_editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="RtlHardcoded" />
+    </android.support.design.widget.TextInputLayout>
+
+    <!--Role Entry-->
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/role_inputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Project Role">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/role_editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="RtlHardcoded" />
+    </android.support.design.widget.TextInputLayout>
 
 
 </LinearLayout>
