--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -113,4 +113,13 @@
     </android.support.design.widget.TextInputLayout>
 
 
+    <android.support.design.button.MaterialButton
+        android:layout_marginTop="@dimen/um_signup_heading_spacing"
+        android:id="@+id/updateBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Update Details"/>
+
+
 </LinearLayout>
